adds svg compiler to symbol reference icons in html

--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
       ]
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0"
+  }
 }
